# WebScraper

./: .gitignore  GEMINI.md  PROJECT_STRUCTURE.md  README.md  RESULTS.md  ROADMAP.md  SECURITY.md  check_models.py  pyproject.toml  requirements.txt  scraper.py  seen_items.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  review.yml
.github/workflows/: ci.yml  codeql.yml  daily_scan.yml  review.yml  scorecard.yml
data/: usage_metrics.json
public/: index.html
src/: config.py  models.py
src/services/: analysis.py  crawler.py  notification.py  orchestrator.py  presenter.py  storage.py
src/utils/: usage_tracker.py
tests/: check_models.py  test_analysis.py  test_crawler.py  test_integration.py  test_quota.py  test_scenarios.py
