[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-scraper"
version = "0.1.0"
description = "A high-performance, AI-driven web scraper using Gemini and Crawl4AI."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Nils", email = "bot@github.com" },
]
dependencies = [
    "google-genai",
    "crawl4ai",
    "requests",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (upgrades syntax to newer python versions)
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
